tests/sksl/errors/golden/Ossfuzz26700.glsl
### Compilation failed:

error: 2: unknown identifier '_'
1 error
